tdf#146471: Firebird: impossible to delete an external table

See https://bugs.documentfoundation.org/show_bug.cgi?id=146471#c1
for full explanations

Change-Id: Ie75669cf951429654ff8e6c28508b9fee2ee03bb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/127715
Tested-by: Jenkins
Reviewed-by: Lionel Mamane <lionel@mamane.lu>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>